fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,26 @@
-body {
-  font-family: Helvetica, Arial, sans-serif;
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
-h1,
-h2 {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  width: 100%;
+}
+
+h1, h2 {
   font-family: "roboto", sans-serif;
 }
 
-header,
-footer {
+header, footer {
   background-color: #1f232a;
   color: #fff;
 }
@@ -46,6 +58,7 @@ a {
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .image-container {
   width: 100%;
   height: 400px;
@@ -63,6 +76,11 @@ a {
   color: #fff;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
 .btn-custom-cv {
   background-color: #fff;
   color: black;
@@ -77,14 +95,13 @@ a {
   color: white;
 }
 
-.custom-github-btn,
-.custom-live-btn {
+.custom-github-btn, .custom-live-btn {
   background-color: #000;
   color: white;
   border: 1px solid transparent;
 }
 
-.custom-github-btn:hover .custom-live-btn:hover {
+.custom-github-btn:hover, .custom-live-btn:hover {
   background-color: #5a6268;
   color: #ffffff;
   transition: background-color 0.3s, color 0.3s;
